# gql-analysis

./: Cargo.toml  Dockerfile  README.md  curls.http  deployment.yaml
analysis-service/: .env  Cargo.toml  Dockerfile  Dockerfile copy  Readme.md  build_and_run.sh  clean_and_build.sh  deployment.yaml  sec_config.yaml
analysis-service/.cargo/: config
analysis-service/src/: config.rs  main.rs
apollo-router/: package-lock.json  package.json  router.yaml  start-router.js  supergraph-config.yaml  supergraph-schema.graphql
apollo-router-proxy/: .gitignore  Dockerfile  router.yaml  supergraph-config.yaml  supergraph-schema.graphql  supergraph-schema.template.graphql
apollo-router-proxy/src/: sidecar_plugin.rs
gql-service/: Cargo.toml  Dockerfile  Readme.md  deployment.yaml
gql-service/src/: bookstore.rs  main.rs  schema.rs
models/starwars/: Cargo.toml
models/starwars/src/: lib.rs  model.rs
src/: main.rs  schema.rs
