[package]
name = "gql-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.6"
async-graphql-axum = "5.0.6"
axum = { version = "0.6.0", features = ["headers"] }
hyper = "0.14"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4.0", features = ["map-request-body", "util"] }
http-body = "0.4.5"
governor = "0.5.1"
nonzero = "0.1.0"
wasm-bindgen = "0.2.84"
