[patch.crates-io]
hyper = { git = "https://github.com/rjzak/hyper", branch = "wasi_wip" }

[package]
name = "gql-analysis"
version = "0.1.0"
edition = "2021"
authors = ["blockchainlover2019 <blockchainlover2019@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.6"
anyhow = "^1.0.55"
serde = "1.0"
serde_json = "1.0"
nonzero = "0.1.0"
http-body = "0.4.5"
hyper_wasi = { version = "0.15", features = ["full"]}
tokio_wasi = { version = "1.21", features = ["rt", "macros", "net", "time", "io-util"]}
tower = { version = "0.4.13", features = ["log", "full"] }
governor = "0.5.1"
graphql-parser = "0.4.0"
graphql_depth_limit = "0.1.1"
target = "2.0.0"
