[package]
name = "gql-service"
version = "0.1.0"
edition = "2021"
authors = ["blockchainlover2019 <blockchainlover2019@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# add
async-graphql = "5.0.6"
async-graphql-axum = "5.0.6"
axum = { version = "0.6.0", features = ["headers"] }
serde = "1.0"
serde_json = "1.0"
governor = "0.5.1"
nonzero = "0.1.0"
anyhow = "^1.0.55"
tokio = { version = "1.20.0", features = ["full"] }